--- a/style.css
+++ b/style.css
@@ -4,16 +4,90 @@
   margin: 0;
   box-sizing: border-box;
 }
-:root{
-    --primary-text-color: #183b56;
-    --secondary-text-color: #577592;
-    --accent-color: #2294ed;
-    --accent-color-dark: #1d69a3;
-
+:root {
+  --primary-text-color: #183b56;
+  --secondary-text-color: #577592;
+  --accent-color: #2294ed;
+  --accent-color-dark: #1d69a3;
 }
 
-body{
-    font-family: "Poppins", sans-serif;
-    color: var(--primary-text-color);
+body {
+  font-family: "Poppins", sans-serif;
+  color: var(--primary-text-color);
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  color: var(--secondary-text-color);
+  line-height: 1.4rem;
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+.container {
+  max-width: 1180px;
+  margin-inline: auto;
+  overflow: auto;
+}
+nav {
+  background-color: #f3faff;
+  box-shadow: 0 0 4px #717c85;
+  position: fixed;
+  top: 0;
+  z-index: 90;
+  left: 0;
+  right: 0;
+}
+.main-nav {
+  justify-content: space-between;
+  padding-block: 8px;
+}
+.company-logo img {
+  width:100px;
+}
+.nav-links ul{
+    gap: 16px;
+}
+.hover-link{
+    cursor: pointer;
+
+}
+.hover-link:hover{
+    color: var(--secondary-text-color);
+}
+.hover-link:active{
+    color: red;
+}
+.search-box{
+    height: 32px;
+    gap: 8px;
+}
+.news-input{
+    width: 200px;
+    height: 100%;
+    padding-inline: 12px;
+    border-radius:4px;
+    border: 2px solid #bbd0e2;
+    font-family: "Roboto", sans-serif;
     
+}
+.search-button{
+    background-color: var(--accent-color);
+    color: white;
+    padding: 8px 24px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: "Roboto", sans-serif;
+
+}
+.search-button:hover{
+    color: var(--accent-color-dark)
 }
