--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav {
   box-shadow: 0 0 4px #717c85;
   position: fixed;
   top: 0;
-  z-index: 90;
+  z-index: 99;
   left: 0;
   right: 0;
 }
@@ -50,44 +50,80 @@ nav {
   padding-block: 8px;
 }
 .company-logo img {
-  width:100px;
+  width: 120px;
 }
-.nav-links ul{
-    gap: 16px;
+.nav-links ul {
+  gap: 16px;
 }
-.hover-link{
-    cursor: pointer;
-
+.hover-link {
+  cursor: pointer;
 }
-.hover-link:hover{
-    color: var(--secondary-text-color);
+.hover-link:hover {
+  color: var(--secondary-text-color);
 }
-.hover-link:active{
-    color: red;
+.hover-link:active {
+  color: red;
 }
-.search-box{
-    height: 32px;
-    gap: 8px;
+.nav-items:active{
+  color: var(--accent-color);
 }
-.news-input{
-    width: 200px;
-    height: 100%;
-    padding-inline: 12px;
-    border-radius:4px;
-    border: 2px solid #bbd0e2;
-    font-family: "Roboto", sans-serif;
-    
+.search-box {
+  height: 32px;
+  gap: 8px;
 }
-.search-button{
-    background-color: var(--accent-color);
-    color: white;
-    padding: 8px 24px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: "Roboto", sans-serif;
-
+.news-input {
+  width: 200px;
+  height: 100%;
+  padding-inline: 12px;
+  border-radius: 4px;
+  border: 2px solid #bbd0e2;
+  font-family: "Roboto", sans-serif;
 }
-.search-button:hover{
-    color: var(--accent-color-dark)
+.search-button {
+  background-color: var(--accent-color);
+  color: white;
+  padding: 8px 24px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+}
+.search-button:hover {
+  color: var(--accent-color-dark);
+}
+main {
+  padding-block: 20px;
+  margin-top: 80px;
+}
+.card-container {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 20px;
+  align-items: start;
+}
+.card {
+  width: 360px;
+  min-height: 400px;
+  box-shadow: 0 0 4px #bfc2c2;
+  cursor: pointer;
+  overflow: hidden;
+  background-color: #fff;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+}
+.card:hover {
+  box-shadow: 1px 1px 8px #d4ecff;
+  background-color: #f9fdff;
+  transform: translateY(-2px);
+}
+.card-header img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+.card-content {
+  padding: 12px;
+}
+.news-source {
+  margin-block: 12px;
 }
